--- a/css/style.css
+++ b/css/style.css
@@ -342,7 +342,7 @@ body#top .side_area nav > ul:hover {
     height: 100vh;
     position: relative;
     overflow: hidden;
-    background: url(https://pbs.twimg.com/media/EqJDfz4U8AAO5Il?format=jpg&name=small);
+    background: url(新歓博物館.jpg);
     background-size: cover;
     background-position: center;
 }
