--- a/css/style.css
+++ b/css/style.css
@@ -342,7 +342,7 @@ body#top .side_area nav > ul:hover {
     height: 100vh;
     position: relative;
     overflow: hidden;
-    background: url(生物室.jpg);
+    background: url();
     background-size: cover;
     background-position: center;
 }
