--- a/css/style.css
+++ b/css/style.css
@@ -389,10 +389,28 @@ body#top .side_area nav > ul:hover {
     text-align: left;
 }
 
-#footer{
-	clear: both;
-	padding: 0px 0px 10px 0px;
-	text-align: center;
-	font-size: 1.5vw;
-  color: #000;
+footer {
+    background: #2857b1;
+}
+
+.footer_logo {
+    width: 200px;
+    margin-bottom: 2%;
+}
+
+footer nav {
+    width: 100%;
+    float: center;
+}
+
+footer nav li {
+    display: inline-block;
+    padding-right: 0%;
+}
+
+footer nav li a {
+    text-decoration: none;
+    font-size: 1.5vw;
+    line-height: 2em;
+    color: #fff;
 }
