--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,16 @@
+@charset "UTF-8";
+
+.side_area nav li a span {
+  display: block;
+  font-size: 1.5vw;
+  white-space: nowrap;
+}
+
+.sub_area {
+  position: relative;
+  padding: 1.5vw 3vw 1.5vw 3vw;
+}
+
 .flex_div {
   display: flex;
   justify-content: center;
