--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,8 @@
 @charset "UTF-8";
 
-.side_area nav li a span {
-  display: block;
-  font-size: 1.5vw;
-  white-space: nowrap;
-}
-
 .sub_area {
-  position: relative;
-  padding: 1.5vw 3vw 1.5vw 3vw;
+    position: relative;
+    padding: 1.5vw 3vw 1.5vw 3vw;
 }
 
 .flex_div {
@@ -25,8 +19,8 @@
 
 .a_div img {
   display: inline-block;
-  width: 20%;
-  height: auto;
+	width: 20%;
+	height: auto;
 }
 
 .b_div {
@@ -39,32 +33,44 @@
 
 .b_div img {
   display: inline-block;
-  width: 100%;
+	width: 100%;
   height: auto;
 }
 
+.mission {
+  position: relative;
+  display: inline-block;
+  margin: 2vw 0vw 0vw 0vw;
+  padding: 2vw 2vw 2vw 2vw;
+  border: dashed 0.4vw #808080;
+  border-radius: 0vw;
+  text-align: left;
+}
+
+/*---------- フッター ---------- */
+
 footer {
-  background: #2857b1;
-  padding: 1vw 0vw 0vw 0vw;
-  text-align: center;
-	font-size: 2vw;
-  color: #fff;
+    background: #2857b1;
+    padding: 1vw 0vw 0vw 0vw;
+    text-align: center;
+	  font-size: 2vw;
+    color: #fff;
 }
 
 footer nav {
-  width: 100%;
-  float: center;
+    width: 100%;
+    float: center;
 }
 
 footer nav li {
-  display: inline-block;
-  padding-right: 0%;
+    display: inline-block;
+    padding-right: 0%;
 }
 
 footer nav li a {
-  text-decoration: none;
-  font-size: 1.5vw;
-  line-height: 2em;
-  color: #fff;
-  text-align: center;
+    text-decoration: none;
+    font-size: 1.5vw;
+    line-height: 2em;
+    color: #fff;
+    text-align: center;
 }
