--- a/css/style.css
+++ b/css/style.css
@@ -1,79 +1,38 @@
-@charset "UTF-8";
+<html>
+  
+<html lang="ja">
+<head>
+	<meta charset="UTF-8">
+	<meta name="404 Page not found" content="TCU Todoroki Science Research Club">
+	<meta name="viewport" content="width=device-width">
+	<title>404 Page not found</title>
+  <link rel="stylesheet" media="all" href="css/style.css">
+</head>
 
-html {
-    font-family: 'M PLUS 1p', 'Montserrat', sans-serif;
-}
-
-    .flex_div {
-        display: flex;
-        justify-content: center;
-    }
-
-    .e_div {
-    display: inline-block;
-    width: 40%;
-    padding:0vw;
-    margin: 0vw 1vw 0vw 1vw;
-    }
-
-　　.e_div img {
-    display: inline-block;
-	  width: 20%;
-	  height: auto;
-    }
-
-    .f_div {
-    display: inline-block;
-    width: 70%;
-    padding:0vw;
-    margin: 0vw 1vw 0vw 1vw;
-    text-align: left;
-    }
-
-    .f_div img {
-    display: inline-block;
-	  width: 100%;
-	  height: auto;
-    }
-
-.mission {
-    position: relative;
-    display: inline-block;
-    margin: 2vw 0vw 0vw 0vw;
-    padding: 2vw 2vw 2vw 2vw;
-    border: dashed 0.4vw #808080;
-    border-radius: 0vw;
-    text-align: left;
-}
-
-iframe{
-  margin: 1vw 0vw 0vw 0vw;
-}
-
-/*---------- フッター ---------- */
-
-footer {
-    background: #2857b1;
-    padding: 1vw 0vw 0vw 0vw;
-    text-align: center;
-	  font-size: 2vw;
-    color: #fff;
-}
-
-footer nav {
-    width: 100%;
-    float: center;
-}
-
-footer nav li {
-    display: inline-block;
-    padding-right: 0%;
-}
-
-footer nav li a {
-    text-decoration: none;
-    font-size: 1.5vw;
-    line-height: 2em;
-    color: #fff;
-    text-align: center;
-}
+<body id="top">
+  <img src="404 Page not found.jpg" width="100%" height="auto">
+  
+  
+<footer>
+  <section class="sub_area">
+    <nav>
+      <ul>
+        <div class="flex_div">
+          <div class="e_div">
+            <img src="tcut.jpg" width="100%">
+          </div>
+          <div class="f_div">
+            <li><a href="https://tcut-sci-tech.github.io/top/">東京都市大学等々力中学校高等学校 理科部 ホームページ</a></li>
+            <li><a href="https://twitter.com/tcut_sci_tech">東京都市大学等々力中学校高等学校 理科部 Twitter</a></li>
+            <li><a href="https://www.tcu-todoroki.ed.jp/">東京都市大学等々力中学校高等学校 ホームページ</a></li>
+          </div>
+        </div>
+        <br><b>Copyright©TCU Todoroki Science Research Club , All Rights Reserved.</b>
+      </ul>
+    </nav>
+  </section>
+</footer>
+   
+  
+   
+</body></html>
