--- a/css/style.css
+++ b/css/style.css
@@ -1,174 +1,64 @@
 @charset "UTF-8";
 
-html {
-    font-family: 'M PLUS 1p', 'Montserrat', sans-serif;
+h1 {
+  margin: 0 0 0 0;
+  position: relative;
+  font-size: 1.5rem;
+  text-align: center;
+  font-weight: 800;
+  color: #000000;
 }
 
-/*----------  ---------- */
-
-.side_area nav li {
-    text-align: center;
+a {
+  margin: 0 0 0 0;
+  position: relative;
+  font-size: 1.3rem;
+  font-weight: 500;
+  color: #000000;
+  text-decoration: none;
 }
 
-.side_area nav li a {
-    display: inline-block;
-    position: relative;
-    font-family: 'Montserrat', 'M PLUS 1p', sans-serif;
-    color: #FFF;
-    font-weight: 700;
-    text-align: center;
-    text-decoration: none;
+txt {
+  margin: 0 0 0 0;
+  position: relative;
+  font-size: 1.5rem;
+  font-weight: 500;
+  color: #000000;
 }
 
-.btn > a {
-    cursor: default;
+.sec01 {
+  margin: 0 0 0 0;
+	height: auto;
+	background-color: #2857b1;
 }
 
-.side_area nav li a span {
-    display: block;
-    font-size: 1.5vw;
-    white-space: nowrap;
+.flex_div {
+  display: flex;
+  justify-content: center;
 }
 
-.sub_area {
-    position: relative;
-    padding: 1.5vw 3vw 1.5vw 3vw;
+.a_div {
+  display: inline-block;
+  width: 40%;
+  padding:0vw;
+  margin: 0vw 1vw 0vw 1vw;
 }
 
-.side_area nav,
-.side_area.topPage nav.scrollOn {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    z-index: 1000;
-    background-color: #2857b1;
+.a_div img {
+  display: inline-block;
+	width: 100%;
+	height: auto;
 }
 
-.side_area nav > ul {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: end;
-    -ms-flex-pack: end;
-    justify-content: flex-end;
-    background-color: #fff;
-    -webkit-box-shadow: 0 0 4px rgba(0, 0, 0, .1);
-    box-shadow: 0 0 4px rgba(0, 0, 0, .1);
+.b_div {
+  display: inline-block;
+  width: 70%;
+  padding:0vw;
+  margin: 0vw 1vw 0vw 1vw;
 }
 
-body#top .side_area nav > ul {
-    background-color: transparent;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-}
-
-body#top .side_area nav.scrollOn > ul,
-body#top .side_area nav > ul:hover {
-    background-color: #2857b1;
-    -webkit-box-shadow: 0 0 4px rgba(0, 0, 0, .1);
-    box-shadow: 0 0 4px rgba(0, 0, 0, .1);
-}
-
-.side_area nav > ul > li {
-    padding: 0 1vw;
-}
-
-.side_area nav > ul > li > a {
-    padding: 1.5vw 0;
-}
-
-.side_area nav li a {
-    display: inline-block;
-    color: #2857b1;
-    font-size: 1.5vw;
-    text-align: center;
-}
-
-.side_area.topPage nav li a {
-    color: #fff;
-}
-
-.side_area.topPage nav > ul:hover > li > a,
-.side_area.topPage nav.scrollOn > ul > li > a {
-    color: #fff;
-}
-
-.side_area nav li a:before {
-    bottom: 0;
-    background-color: #fff;
-}
-
-    .flex_div {
-        display: flex;
-        justify-content: center;
-    }
-
-    .e_div {
-    display: inline-block;
-    width: 40%;
-    padding:0vw;
-    margin: 0vw 1vw 0vw 1vw;
-    }
-
-　　.e_div img {
-    display: inline-block;
-	  width: 20%;
-	  height: auto;
-    }
-
-    .f_div {
-    display: inline-block;
-    width: 70%;
-    padding:0vw;
-    margin: 0vw 1vw 0vw 1vw;
-    text-align: left;
-    }
-
-    .f_div img {
-    display: inline-block;
-	  width: 100%;
-	  height: auto;
-    }
-
-.mission {
-    position: relative;
-    display: inline-block;
-    margin: 2vw 0vw 0vw 0vw;
-    padding: 2vw 2vw 2vw 2vw;
-    border: dashed 0.4vw #808080;
-    border-radius: 0vw;
-    text-align: left;
-}
-
-iframe{
-  margin: 1vw 0vw 0vw 0vw;
-}
-
-/*---------- フッター ---------- */
-
-footer {
-    background: #2857b1;
-    padding: 1vw 0vw 0vw 0vw;
-    text-align: center;
-	  font-size: 2vw;
-    color: #fff;
-}
-
-footer nav {
-    width: 100%;
-    float: center;
-}
-
-footer nav li {
-    display: inline-block;
-    padding-right: 0%;
-}
-
-footer nav li a {
-    text-decoration: none;
-    font-size: 1.5vw;
-    line-height: 2em;
-    color: #fff;
-    text-align: center;
+.b_div img {
+  display: inline-block;
+	width: 100%;
+	height: auto;
 }
