--- a/css/style.css
+++ b/css/style.css
@@ -3,18 +3,18 @@
 h1 {
   margin: 0 0 0 0;
   position: relative;
-  font-size: 1.5rem;
+  font-size: 1.7rem;
   text-align: center;
   font-weight: 800;
-  color: #000000;
+  color: #ffffff;
 }
 
 a {
   margin: 0 0 0 0;
   position: relative;
-  font-size: 1.3rem;
-  font-weight: 500;
-  color: #000000;
+  font-size: 1.5rem;
+  font-weight: 800;
+  color: #ffffff;
   text-decoration: none;
 }
 
