--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 h1 {
   margin: 0 0 0 0;
   position: relative;
-  font-size: 1.7rem;
+  font-size: 2.5vw;
   text-align: center;
   font-weight: 800;
   color: #ffffff;
@@ -12,18 +12,10 @@ h1 {
 a {
   margin: 0 0 0 0;
   position: relative;
-  font-size: 1.5rem;
+  font-size: 2vw;
   font-weight: 800;
   color: #ffffff;
   text-decoration: none;
-}
-
-txt {
-  margin: 0 0 0 0;
-  position: relative;
-  font-size: 1.5rem;
-  font-weight: 500;
-  color: #000000;
 }
 
 .sec01 {
