--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 @charset "UTF-8";
 
+body {
+  font-family: "游ゴシック Medium", "Yu Gothic Medium", "游ゴシック体", "YuGothic", "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "メイリオ", "Meiryo", "verdana", sans-serif;
+}
+
 h1 {
   margin: 0 0 0 0;
   position: relative;
